checked wrong static (css) inside a git repo (), added line-under-mouse hiliter

--- a/my_klaus/templates/klaus/view_blob.html
+++ b/my_klaus/templates/klaus/view_blob.html
@@ -10,6 +10,8 @@
 
 {% block content %} 
 
+<script src="/css/klaus/line-highlighter.js"></script>
+
 {% include "klaus/includes/header.inc.html" %}
 <div style="width:23%;">
 {% include 'klaus/includes/tree.inc.html' %} 
