--- a/my_klaus/templates/klaus/view_commit.html
+++ b/my_klaus/templates/klaus/view_commit.html
@@ -12,6 +12,8 @@
 
 {% block content %}
 
+<script src="/css/klaus/line-highlighter.js"></script>
+
 {% include "klaus/includes/header.inc.html" %}
 
 <link rel="stylesheet" href="/css/klaus/pygments.css" type="text/css" charset="utf-8">
