--- a/my_klaus/templates/klaus/view_blob.html
+++ b/my_klaus/templates/klaus/view_blob.html
@@ -10,6 +10,8 @@
 
 {% block content %} 
 
+{% if is_may_read %}
+
 <script src="/css/klaus/line-highlighter.js"></script>
 
 {% include "klaus/includes/header.inc.html" %}
@@ -117,4 +119,5 @@
     });
 </script>
 
+{% endif %}
 {% endblock %}
