--- a/my_klaus/templates/klaus/view_blob.html
+++ b/my_klaus/templates/klaus/view_blob.html
@@ -63,8 +63,8 @@
             <div class="modal-header">
                 <h5 class="modal-title">Modal title</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
             <div class="modal-body">
                 <form>
@@ -105,7 +105,7 @@
             var rev = "{{rev}}"
             var repo_url = "{{repo_url}}"
             var path = "{{path}}"
-            $.post('/klaus/comment/', {
+            $.post('/git/comment/', {
                 'text': text,
                 'line': line,
                 'rev': rev,
