now it separates permissions to read and write

--- a/my_klaus/templates/klaus/history.html
+++ b/my_klaus/templates/klaus/history.html
@@ -4,12 +4,7 @@
 
 {% load klaus %} 
 
-{% block title %} 
-History of {% if path %}{{ path }} - {% endif %} 
-
-{{ block.super }} 
-
-{% endblock %} 
+{% block title %}History of {% if path %}{{ path }} - {% endif %} {{ block.super }} {% endblock %} 
 
 {% block content %} 
 
