--- a/my_klaus/templates/klaus/repo_list.html
+++ b/my_klaus/templates/klaus/repo_list.html
@@ -4,9 +4,7 @@
 
 {% load static %} 
 
-{% block title %}
-Repository list
-{% endblock %} 
+{% block title %}Repository list{% endblock %} 
 
 {% block content %}
 
