--- a/my_klaus/templates/klaus/view_blob.html
+++ b/my_klaus/templates/klaus/view_blob.html
@@ -4,9 +4,7 @@
 
 {% load klaus %} 
 
-{% block title %} {{ path }} - {{ block.super }} 
-
-{% endblock %} 
+{% block title %} {{ path }} - {{ block.super }} {% endblock %} 
 
 {% block content %} 
 
@@ -61,7 +59,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Modal title</h5>
+                <h5 class="modal-title">Your Comment</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
