error in the topic_edit template was checked

--- a/cicero/templates/cicero/topic_edit.html
+++ b/cicero/templates/cicero/topic_edit.html
@@ -19,7 +19,7 @@
 
 {% block aside %}
 <ul id="breadcrumbs" class="block">
-  <li><a href="{% url cicero.views.topic article.topic.forum.slug,article.topic.id %}">Топик</a>
+  <li><a href="{% url cicero.views.topic topic.forum.slug,topic.id %}">Топик</a>
 </ul>
 
 {% endblock %}
